--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NBA Analytics</title>
-    <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-grid.css">
-    <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-theme-alpine.css">
     <style>
         body {
             font-family: 'Georgia', sans-serif;
@@ -143,7 +141,7 @@
                 Although still possible, the analysis is now geared towards identifying trends within the sport for predictive purposes. Please follow the navigation
                 on the side for more!
             </p>
-            <div id="myGrid" style="height: 600px; width:100%;" class="ag-theme-alpine"></div>
+            <div id="myGrid" style="height: 600px; width:100%;" class="ag-theme-quartz"></div>
         </div>
     </div>
     <div class="side-drawer" id="sideDrawer">
@@ -160,7 +158,7 @@
     <footer>
         &copy; 2023 NBA Analytics. All rights reserved.
     </footer>
-    <script src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.noStyle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script>
     <script>
         function toggleMenu() {
             var sideDrawer = document.getElementById('sideDrawer');
