--- a/index.html
+++ b/index.html
@@ -159,5 +159,6 @@
     <footer>
         &copy; 2023 NBA Analytics. All rights reserved.
     </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
