--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         <a onclick="showSection('performance')">Player Performance</a>
     </div>
 
-    <!-- Home: Name Filter with Dataset -->
+    <!-- Home Section -->
     <div class="section" id="home">
         <div class="image">
-            <img src="path_to_image_home.png" alt="Home Image">
+            <img src="correct_path_to_home_image.png" alt="Home Image">
         </div>
         <div class="text">
             <h2>Home: Name Filter with Dataset</h2>
@@ -248,5 +248,4 @@
     </footer>
     <script src="scripts.js"></script>
 </body>
-
 </html>
