--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
         <a onclick="showSection('performance')">Player Performance</a>
     </div>
 
-    <!-- Home Section -->
+<!-- Home Section -->
     <div class="section" id="home">
-        <div class="image">
-            <img src="correct_path_to_home_image.png" alt="Home Image">
-        </div>
         <div class="text">
             <h2>Home: Name Filter with Dataset</h2>
             <p>Explanation about the analysis...</p>
@@ -49,7 +46,7 @@
         <!-- Player Height Trend -->
         <div class="subsection">
             <div class="image">
-                <img src="path_to_image.png" alt="Image">
+                <img src="photos/player_height.png" alt="Image">
             </div>
             <div class="text">
                 <h3>a. Player Height Trend</h3>
@@ -59,7 +56,7 @@
         <!-- Player Age Trend -->
         <div class="subsection">
             <div class="image">
-                <img src="path_to_image.png" alt="Image">
+                <img src="photos/player_age.png" alt="Image">
             </div>
             <div class="text">
                 <h3>b. Player Age Trend</h3>
@@ -73,7 +70,7 @@
         <!-- Top 10 colleges with the Most Players in the NBA -->
         <div class="subsection">
             <div class="image">
-                <img src="path_to_image.png" alt="Image">
+                <img src="photos/college_1.png" alt="Image">
             </div>
             <div class="text">
                 <h3>a. Top 10 colleges with the Most Players in the NBA</h3>
@@ -83,7 +80,7 @@
         <!-- Top 10 Colleges with Highest Number of Lottery Picks -->
         <div class="subsection">
             <div class="image">
-                <img src="path_to_image.png" alt="Image">
+                <img src="photos/college_2.png" alt="Image">
             </div>
             <div class="text">
                 <h3>b. Top 10 Colleges with Highest Number of Lottery Picks</h3>
@@ -93,7 +90,7 @@
         <!-- Top 10 Colleges with Highest % of NBA Players as lottery picks -->
         <div class="subsection">
             <div class="image">
-                <img src="path_to_image.png" alt="Image">
+                <img src="photos/college_3.png" alt="Image">
             </div>
             <div class="text">
                 <h3>c. Top 10 Colleges with Highest % of NBA Players as lottery picks</h3>
@@ -107,7 +104,7 @@
         <!-- Highest Scoring Players -->
         <div class="subsection">
             <div class="image">
-                <img src="path_to_image.png" alt="Image">
+                <img src="photos/scoring_1.png" alt="Image">
             </div>
             <div class="text">
                 <h3>a. Highest Scoring Players</h3>
@@ -117,7 +114,7 @@
         <!-- Players Ranked Top 10 in Scoring -->
         <div class="subsection">
             <div class="image">
-                <img src="path_to_image.png" alt="Image">
+                <img src="photos/scoring_2.png" alt="Image">
             </div>
             <div class="text">
                 <h3>b. Players Ranked Top 10 in Scoring</h3>
@@ -131,7 +128,7 @@
         <!-- Player Performance by Age -->
         <div class="subsection">
             <div class="image">
-                <img src="path_to_image.png" alt="Image">
+                <img src="photos/performance_1.png" alt="Image">
             </div>
             <div class="text">
                 <h3>a. Player Performance by Age</h3>
@@ -141,7 +138,7 @@
         <!-- Efficiency Analysis on Player Size -->
         <div class="subsection">
             <div class="image">
-                <img src="path_to_image.png" alt="Image">
+                <img src="photos/performance_2.png" alt="Image">
             </div>
             <div class="text">
                 <h3>b. Efficiency Analysis on Player Size</h3>
@@ -151,7 +148,7 @@
         <!-- Assist Trends -->
         <div class="subsection">
             <div class="image">
-                <img src="path_to_image.png" alt="Image">
+                <img src="photos/performance_3.png" alt="Image">
             </div>
             <div class="text">
                 <h3>c. Assist Trends</h3>
@@ -161,7 +158,7 @@
         <!-- True Shooting Trends -->
         <div class="subsection">
             <div class="image">
-                <img src="path_to_image.png" alt="Image">
+                <img src="photos/performance_4.png" alt="Image">
             </div>
             <div class="text">
                 <h3>d. True Shooting Trends</h3>
@@ -171,7 +168,7 @@
         <!-- Top 5 Players by size -->
         <div class="subsection">
             <div class="image">
-                <img src="path_to_image.png" alt="Image">
+                <img src="photos/performance_5.png" alt="Image">
             </div>
             <div class="text">
                 <h3>e. Top 5 Players by Size</h3>
