--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a onclick="showSection('performance')">Player Performance</a>
     </div>
 
-<!-- Home Section -->
+    <!-- Home Section -->
     <div class="section" id="home">
         <div class="text">
             <h2>Home: Name Filter with Dataset</h2>
@@ -29,6 +29,7 @@
         </div>
         <div id="myGrid" class="ag-theme-quartz" style="height: 600px; width:100%;"></div>
     </div>
+    
     <!-- General Overview of Dataset -->
     <div class="section" id="overview">
         <div class="image">
@@ -64,7 +65,6 @@
             </div>
         </div>
     </div>
-
     <!-- College Trends 1996-2023 -->
     <div class="section" id="college-trends">
         <!-- Top 10 colleges with the Most Players in the NBA -->
@@ -73,7 +73,7 @@
                 <img src="photos/college_1.png" alt="Image">
             </div>
             <div class="text">
-                <h3>a. Top 10 colleges with the Most Players in the NBA</h3>
+                <h3>a. Top 10 Colleges with the Most Players in the NBA</h3>
                 <p>Explanation about the top colleges with the most NBA players...</p>
             </div>
         </div>
