--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- General Overview of Dataset -->
     <div class="section" id="overview">
         <div class="image">
-            <img src="path_to_image.png" alt="Image">
+            <img src="photos/correlation_matrix.png" alt="Image">
         </div>
         <div class="text">
             <h2>1. General Overview of Dataset</h2>
