--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body onload="showSection('home')">
     <header>
+        <img src="https://images.ctfassets.net/h8q6lxmb5akt/5qXnOINbPrHKXWa42m6NOa/421ab176b501f5bdae71290a8002545c/nba-logo_2x.png" alt="NBA Logo">
         <h1>NBA Analytics</h1>
     </header>
 
@@ -21,7 +22,6 @@
         <a onclick="showSection('performance')">Player Performance</a>
     </div>
 
-    <!-- Home Section -->
     <div class="section" id="home">
         <div class="text">
             <h2>Home: Name Filter with Dataset</h2>
@@ -30,34 +30,30 @@
         <div id="myGrid" class="ag-theme-quartz" style="height: 600px; width:100%;"></div>
     </div>
     
-    <!-- General Overview of Dataset -->
     <div class="section" id="overview">
-        <div class="image">
-            <img src="photos/correlation_matrix.png" alt="Image">
-        </div>
         <div class="text">
             <h2>1. General Overview of Dataset</h2>
             <h3>a. Correlation Matrix</h3>
             <p>Explanation about the correlation matrix...</p>
         </div>
+        <div class="image">
+            <img src="photos/correlation_matrix.png" alt="Correlation Matrix">
+        </div>
     </div>
 
-    <!-- NBA Team Trends 1996-2023 -->
     <div class="section" id="team-trends">
-        <!-- Player Height Trend -->
         <div class="subsection">
             <div class="image">
-                <img src="photos/player_height.png" alt="Image">
+                <img src="photos/player_height.png" alt="Player Height Trend">
             </div>
             <div class="text">
                 <h3>a. Player Height Trend</h3>
                 <p>Explanation about the player height trend...</p>
             </div>
         </div>
-        <!-- Player Age Trend -->
         <div class="subsection">
             <div class="image">
-                <img src="photos/player_age.png" alt="Image">
+                <img src="photos/player_age.png" alt="Player Age Trend">
             </div>
             <div class="text">
                 <h3>b. Player Age Trend</h3>
@@ -65,56 +61,50 @@
             </div>
         </div>
     </div>
-    <!-- College Trends 1996-2023 -->
+
     <div class="section" id="college-trends">
-        <!-- Top 10 colleges with the Most Players in the NBA -->
         <div class="subsection">
             <div class="image">
-                <img src="photos/college_1.png" alt="Image">
+                <img src="photos/college_1.png" alt="Top 10 Colleges with Most NBA Players">
             </div>
             <div class="text">
                 <h3>a. Top 10 Colleges with the Most Players in the NBA</h3>
                 <p>Explanation about the top colleges with the most NBA players...</p>
             </div>
         </div>
-        <!-- Top 10 Colleges with Highest Number of Lottery Picks -->
         <div class="subsection">
             <div class="image">
-                <img src="photos/college_2.png" alt="Image">
+                <img src="photos/college_2.png" alt="Top Colleges with Lottery Picks">
             </div>
             <div class="text">
                 <h3>b. Top 10 Colleges with Highest Number of Lottery Picks</h3>
                 <p>Explanation about the top colleges with the highest number of lottery picks...</p>
             </div>
         </div>
-        <!-- Top 10 Colleges with Highest % of NBA Players as lottery picks -->
         <div class="subsection">
             <div class="image">
-                <img src="photos/college_3.png" alt="Image">
+                <img src="photos/college_3.png" alt="Colleges with NBA Players as Lottery Picks">
             </div>
             <div class="text">
-                <h3>c. Top 10 Colleges with Highest % of NBA Players as lottery picks</h3>
+                <h3>c. Top 10 Colleges with Highest % of NBA Players as Lottery Picks</h3>
                 <p>Explanation about the top colleges with the highest percentage of NBA players as lottery picks...</p>
             </div>
         </div>
     </div>
 
-    <!-- Scoring Players 1996-2023 -->
     <div class="section" id="scoring-players">
-        <!-- Highest Scoring Players -->
         <div class="subsection">
             <div class="image">
-                <img src="photos/scoring_1.png" alt="Image">
+                <img src="photos/scoring_1.png" alt="Highest Scoring Players">
             </div>
             <div class="text">
                 <h3>a. Highest Scoring Players</h3>
                 <p>Explanation about the highest scoring players...</p>
             </div>
         </div>
-        <!-- Players Ranked Top 10 in Scoring -->
         <div class="subsection">
             <div class="image">
-                <img src="photos/scoring_2.png" alt="Image">
+                <img src="photos/scoring_2.png" alt="Top 10 Scoring Players">
             </div>
             <div class="text">
                 <h3>b. Players Ranked Top 10 in Scoring</h3>
@@ -123,52 +113,46 @@
         </div>
     </div>
 
-    <!-- Player Performance -->
     <div class="section" id="performance">
-        <!-- Player Performance by Age -->
         <div class="subsection">
             <div class="image">
-                <img src="photos/performance_1.png" alt="Image">
+                <img src="photos/performance_1.png" alt="Player Performance by Age">
             </div>
             <div class="text">
                 <h3>a. Player Performance by Age</h3>
                 <p>Explanation about the player performance by age...</p>
             </div>
         </div>
-        <!-- Efficiency Analysis on Player Size -->
         <div class="subsection">
             <div class="image">
-                <img src="photos/performance_2.png" alt="Image">
+                <img src="photos/performance_2.png" alt="Efficiency Analysis on Player Size">
             </div>
             <div class="text">
                 <h3>b. Efficiency Analysis on Player Size</h3>
                 <p>Explanation about the efficiency analysis on player size...</p>
             </div>
         </div>
-        <!-- Assist Trends -->
         <div class="subsection">
             <div class="image">
-                <img src="photos/performance_3.png" alt="Image">
+                <img src="photos/performance_3.png" alt="Assist Trends">
             </div>
             <div class="text">
                 <h3>c. Assist Trends</h3>
                 <p>Explanation about the assist trends...</p>
             </div>
         </div>
-        <!-- True Shooting Trends -->
         <div class="subsection">
             <div class="image">
-                <img src="photos/performance_4.png" alt="Image">
+                <img src="photos/performance_4.png" alt="True Shooting Trends">
             </div>
             <div class="text">
                 <h3>d. True Shooting Trends</h3>
                 <p>Explanation about the true shooting trends...</p>
             </div>
         </div>
-        <!-- Top 5 Players by size -->
         <div class="subsection">
             <div class="image">
-                <img src="photos/performance_5.png" alt="Image">
+                <img src="photos/performance_5.png" alt="Top 5 Players by Size">
             </div>
             <div class="text">
                 <h3>e. Top 5 Players by Size</h3>
