--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body onload="showSection('home')">
     <header>
-        <img src="https://images.ctfassets.net/h8q6lxmb5akt/5qXnOINbPrHKXWa42m6NOa/421ab176b501f5bdae71290a8002545c/nba-logo_2x.png" alt="NBA Logo">
+        <img src="https://images.ctfassets.net/h8q6lxmb5akt/5qXnOINbPrHKXWa42m6NOa/421ab176b501f5bdae71290a8002545c/nba-logo_2x.png" alt="NBA Logo" class="nba-logo">
         <h1>NBA Analytics</h1>
     </header>
 
