--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NBA Analytics</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="photos/favicon/favicon.png">
     <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script>
 </head>
 <body onload="showSection('home')">
