--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <div class="section" id="home">
         <div class="text">
-            <h2>Home: Name Filter with Dataset</h2>
-            <p>Explanation about the analysis...</p>
+            <h2>Home: Dataset</h2>
+            <p></p>
         </div>
         <div id="myGrid" class="ag-theme-quartz" style="height: 600px; width:100%;"></div>
     </div>
@@ -35,7 +35,12 @@
         <div class="text">
             <h2>1. General Overview of Dataset</h2>
             <h3>a. Correlation Matrix</h3>
-            <p>Explanation about the correlation matrix...</p>
+            <p>Insights:
+                1. reb has a moderate positive correlation to player_height (Taller abd heavier players get more rebounds)
+                
+                2. player_height and ast are negatively correlated (Shorter players tend to have higher assist percentages, which makes sense, since guards will mostly be handling the ball)
+                
+                3. pts, reb and ast are positively correlated (There is a higher likelihood that players who can score also can dish the `ball to their teammates. Nikola Jokic or other players that can score triple doubles)</p>
         </div>
         <div class="image">
             <img src="photos/correlation_matrix.png" alt="Correlation Matrix">
