--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="text">
                 <h3>a. Player Height Trend</h3>
-                <p>Explanation about the player height trend...</p>
+                <p>The average height of NBA players appears to have experienced a decline, potentially influenced by the strategic shift towards small-ball line ups, featured by the Golden State Warriors during their renowned 73-9 season. This shift could be attributed to the importance on three-point shooting in today's game, leading teams to prioritize players with sharpshooting skills over traditional big men..</p>
             </div>
         </div>
         <div class="subsection">
@@ -63,7 +63,7 @@
             </div>
             <div class="text">
                 <h3>b. Player Age Trend</h3>
-                <p>Explanation about the player age trend...</p>
+                <p>Fascinatingly, the average age of NBA teams has witnessed a nearly 2-year decrease in the last 25 years. This suggests a growing inclination among teams to heavily invest in their younger players. The youth is the future, and it seems like the future is here to stay.</p>
             </div>
         </div>
     </div>
@@ -105,7 +105,8 @@
             </div>
             <div class="text">
                 <h3>a. Highest Scoring Players</h3>
-                <p>Explanation about the highest scoring players...</p>
+                <p>Right away, notable names such as AI and Kevin Durant emerge as dominant forces, each leading the league's scoring charts in four distinct seasons. James Harden closely follows with three seasons topping the scoring sheet.Yet, this visualization focuses solely on the foremost scoring leaders, overlooking numerous outstanding scoring performances by other players throughout the years simply because they didn't clinch the top spot. What if we aimed to identify the top 10 scorers each season? That would paint an entirely different picture!
+</p>
             </div>
         </div>
         <div class="subsection">
@@ -114,7 +115,7 @@
             </div>
             <div class="text">
                 <h3>b. Players Ranked Top 10 in Scoring</h3>
-                <p>Explanation about the players ranked top 10 in scoring...</p>
+                <p>Lebron, Kobe and Durant now lead the pack, placing in the top 10 in scoring for 17 and 14 seasons respectively.</p>
             </div>
         </div>
     </div>
