--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
             <div class="text">
                 <h3>e. Top 5 Players by Size</h3>
-                <p>Explanation about the top 5 players by size...</p>
+                <p>This ranking was conducted by taking into consideration the various advantages athletes of differing physical attributes have. The weighting scheme is applied to NBA players by categorizing them based on relative size. The smaller third of players are awarded higher points for grabbing rebounds, the middle third are awarded slightly higher points for having assists and rebounds, and the largest third of players are awared higher points for having assists. </p>
             </div>
         </div>
     </div>
