--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h2>1. General Overview of Dataset</h2>
             <h3>a. Correlation Matrix</h3>
             <p>Insights:
-                1. reb has a moderate positive correlation to player_height (Taller abd heavier players get more rebounds)
+                1. reb has a moderate positive correlation to player_height (Taller and heavier players get more rebounds)
                 
                 2. player_height and ast are negatively correlated (Shorter players tend to have higher assist percentages, which makes sense, since guards will mostly be handling the ball)
                 
@@ -105,7 +105,7 @@
             </div>
             <div class="text">
                 <h3>a. Highest Scoring Players</h3>
-                <p>Right away, notable names such as AI and Kevin Durant emerge as dominant forces, each leading the league's scoring charts in four distinct seasons. James Harden closely follows with three seasons topping the scoring sheet.Yet, this visualization focuses solely on the foremost scoring leaders, overlooking numerous outstanding scoring performances by other players throughout the years simply because they didn't clinch the top spot. What if we aimed to identify the top 10 scorers each season? That would paint an entirely different picture!
+                <p>Right away, notable names such as Allen Iversen emerge as a dominant force, leading the league's scoring charts in four distinct seasons. Kobe Bryant and James Harden closely follows with three seasons topping the scoring sheet. Yet, this visualization focuses solely on the foremost scoring leaders, overlooking numerous outstanding scoring performances by other players throughout the years simply because they didn't clinch the top spot. What if we aimed to identify the top 10 scorers each season? That would paint an entirely different picture!
 </p>
             </div>
         </div>
