--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
             <div class="text">
                 <h3>a. Player Performance by Age</h3>
-                <p>Explanation about the player performance by age...</p>
+                <p>This graph provides insights into the typical peaks of a basketball player's career. Scoring tends to reach its height early, which might be attributed to the energy and athleticism of younger players. Rebounding appears less affected by age, hinting at the role of positioning and technique. Assists increase with age, suggesting that players develop a better sense of team dynamics and game management as they mature.</p>
             </div>
         </div>
         <div class="subsection">
@@ -136,7 +136,7 @@
             </div>
             <div class="text">
                 <h3>b. Efficiency Analysis on Player Size</h3>
-                <p>Explanation about the efficiency analysis on player size...</p>
+                <p>Height appears to give players a scoring edge, as shown in this bar graph. Taller players generally score more, likely due to their ability to shoot over defenders and their proximity to the basket. However, the presence of points across all height brackets indicates that height is just one of many factors that contribute to a player's scoring ability.</p>
             </div>
         </div>
         <div class="subsection">
@@ -145,7 +145,7 @@
             </div>
             <div class="text">
                 <h3>c. Assist Trends</h3>
-                <p>Explanation about the assist trends...</p>
+                <p>The increase in assists over the seasons depicted in this graph may reflect a shift towards more team-centric play. The steep rise in recent seasons suggests that the game is evolving, with a stronger emphasis on ball movement and playmaking to create scoring opportunities.</p>
             </div>
         </div>
         <div class="subsection">
@@ -154,7 +154,7 @@
             </div>
             <div class="text">
                 <h3>d. True Shooting Trends</h3>
-                <p>Explanation about the true shooting trends...</p>
+                <p>This graph traces the upward trend in shooting efficiency over several basketball seasons. Notably, players today are more accurate than ever, a change that likely reflects advancements in training, player selection, and the strategic emphasis on high-efficiency shots. Despite some fluctuations, the general increase suggests that players and coaches have grown more adept at maximizing scoring opportunities.</p>
             </div>
         </div>
         <div class="subsection">
